--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:02:17 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:03:00 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -182,10 +182,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 E thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout">Xander Schauffele(W) +3
+      <td class="greyout leftborder">Xander Schauffele(W) +3
 +1 thru 4</td>
+      <td class="greyout">Viktor Hovland +3
++3 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -198,8 +198,8 @@ Not started</td>
 Not started</td>
       <td>Tyrrell Hatton E
 E thru 7</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +2
-+2 thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +3
++3 thru 5</td>
       <td class="greyout">Sam Burns +6
 +3 thru 7</td>
     </tr>
@@ -231,9 +231,9 @@ Not started</td>
       <td>Will Zalatoris -1
 E thru 5</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
--1 thru 5</td>
-      <td class="greyout">Viktor Hovland +2
-+2 thru 4</td>
+-1 thru 6</td>
+      <td class="greyout">Viktor Hovland +3
++3 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -247,7 +247,7 @@ E thru 8</td>
       <td>Will Zalatoris -1
 E thru 5</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
--1 thru 5</td>
+-1 thru 6</td>
       <td class="greyout">Xander Schauffele +3
 +1 thru 4</td>
     </tr>
@@ -293,7 +293,7 @@ Not started</td>
       <td>Tiger Woods -1
 Not started</td>
       <td>Jon Rahm(W) +1
--1 thru 5</td>
+-1 thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +3
 +1 thru 4</td>
       <td class="greyout">Sam Burns +6
@@ -309,7 +309,7 @@ Not started</td>
       <td>Will Zalatoris -1
 E thru 5</td>
       <td>Jon Rahm +1
--1 thru 5</td>
+-1 thru 6</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 5</td>
       <td class="greyout">Brooks Koepka +3
@@ -326,8 +326,8 @@ Not started</td>
 +1 thru 5</td>
       <td>Shane Lowry +1
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 5</td>
       <td class="greyout">Brooks Koepka +3
 E thru 4</td>
     </tr>
@@ -343,7 +343,7 @@ Not started</td>
       <td>Rory McIlroy E
 -1 thru 4</td>
       <td class="greyout leftborder">Jon Rahm +1
--1 thru 5</td>
+-1 thru 6</td>
       <td class="greyout">Robert MacIntyre +2
 +1 thru 12</td>
     </tr>
@@ -359,7 +359,7 @@ Not started</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
--1 thru 5</td>
+-1 thru 6</td>
       <td class="greyout">Brooks Koepka +3
 E thru 4</td>
     </tr>
@@ -405,7 +405,7 @@ Not started</td>
       <td>Will Zalatoris -1
 E thru 5</td>
       <td>Jon Rahm +1
--1 thru 5</td>
+-1 thru 6</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 5</td>
       <td class="greyout">Xander Schauffele +3
@@ -421,9 +421,9 @@ Not started</td>
       <td>Patrick Cantlay(W) -1
 +1 thru 5</td>
       <td>Jon Rahm +1
--1 thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 4</td>
+-1 thru 6</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 5</td>
       <td class="greyout">Sam Burns +6
 +3 thru 7</td>
     </tr>
@@ -455,9 +455,9 @@ Not started</td>
       <td>Shane Lowry +1
 Not started</td>
       <td class="greyout leftborder">Jon Rahm +1
--1 thru 5</td>
-      <td class="greyout">Viktor Hovland +2
-+2 thru 4</td>
+-1 thru 6</td>
+      <td class="greyout">Viktor Hovland +3
++3 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">BCREAMED</td>
@@ -517,27 +517,11 @@ Not started</td>
       <td>Rory McIlroy(W) E
 -1 thru 4</td>
       <td>Jon Rahm +1
--1 thru 5</td>
+-1 thru 6</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 5</td>
-      <td class="greyout">Viktor Hovland +2
-+2 thru 4</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 10</td>
-      <td>Jordan Spieth +1
--1 thru 5</td>
-      <td>Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 4</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
+      <td class="greyout">Viktor Hovland +3
++3 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -565,11 +549,11 @@ Not started</td>
       <td>Rory McIlroy E
 -1 thru 4</td>
       <td>Jon Rahm(W) +1
--1 thru 5</td>
+-1 thru 6</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 5</td>
-      <td class="greyout">Viktor Hovland +2
-+2 thru 4</td>
+      <td class="greyout">Viktor Hovland +3
++3 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -611,7 +595,7 @@ Not started</td>
       <td>Joaquin Niemann -3
 Not started</td>
       <td>Jon Rahm(W) +1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Brooks Koepka +3
 E thru 4</td>
       <td class="greyout leftborder">Xander Schauffele +3
@@ -630,10 +614,26 @@ E thru 5</td>
 -1 thru 4</td>
       <td>Collin Morikawa +1
 E thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout">Xander Schauffele(W) +3
+      <td class="greyout leftborder">Xander Schauffele(W) +3
 +1 thru 4</td>
+      <td class="greyout">Viktor Hovland +3
++3 thru 5</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 10</td>
+      <td>Jordan Spieth +1
+-1 thru 5</td>
+      <td>Viktor Hovland +3
++3 thru 5</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -661,7 +661,7 @@ E thru 5</td>
       <td>Rory McIlroy E
 -1 thru 4</td>
       <td>Jon Rahm +1
--1 thru 5</td>
+-1 thru 6</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 4</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -677,9 +677,9 @@ Not started</td>
       <td>Jordan Spieth(W) +1
 -1 thru 5</td>
       <td>Jon Rahm +1
--1 thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 4</td>
+-1 thru 6</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 5</td>
       <td class="greyout">Brooks Koepka +3
 E thru 4</td>
     </tr>
@@ -694,26 +694,10 @@ Not started</td>
 Not started</td>
       <td>Brian Harman +2
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 5</td>
       <td class="greyout">Sam Burns +6
 +3 thru 7</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -1
-+1 thru 5</td>
-      <td>Rory McIlroy E
--1 thru 4</td>
-      <td>Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 4</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -725,27 +709,11 @@ Not started</td>
       <td>Collin Morikawa +1
 E thru 6</td>
       <td>Jon Rahm +1
--1 thru 5</td>
+-1 thru 6</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 5</td>
       <td class="greyout">Robert MacIntyre +2
 +1 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Patrick Cantlay -1
-+1 thru 5</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td>Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 4</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -757,11 +725,27 @@ Not started</td>
       <td>Jordan Spieth(W) +1
 -1 thru 5</td>
       <td>Jon Rahm +1
--1 thru 5</td>
+-1 thru 6</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 4</td>
       <td class="greyout">Sam Burns +6
 +3 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -1
++1 thru 5</td>
+      <td>Rory McIlroy E
+-1 thru 4</td>
+      <td>Viktor Hovland +3
++3 thru 5</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
@@ -771,7 +755,7 @@ E thru 4</td>
       <td>Rory McIlroy E
 -1 thru 4</td>
       <td>Jon Rahm(W) +1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Jordan Spieth +1
 -1 thru 5</td>
       <td class="greyout leftborder">Xander Schauffele +3
@@ -790,9 +774,25 @@ E thru 5</td>
 -1 thru 4</td>
       <td>Collin Morikawa +1
 E thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 5</td>
       <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Patrick Cantlay -1
++1 thru 5</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td>Viktor Hovland +3
++3 thru 5</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 4</td>
+      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -805,9 +805,9 @@ E thru 5</td>
       <td>Collin Morikawa +1
 E thru 6</td>
       <td>Jon Rahm +1
--1 thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +2
-+2 thru 4</td>
+-1 thru 6</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +3
++3 thru 5</td>
       <td class="greyout">Xander Schauffele +3
 +1 thru 4</td>
     </tr>
@@ -828,22 +828,6 @@ E thru 4</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Rory McIlroy E
--1 thru 4</td>
-      <td>Jon Rahm(W) +1
--1 thru 5</td>
-      <td>Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 4</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 4</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">0</td>
       <td>Patrick Cantlay -1
@@ -851,7 +835,7 @@ E thru 4</td>
       <td>Tony Finau -1
 Not started</td>
       <td>Jon Rahm(W) +1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Collin Morikawa +1
 E thru 6</td>
       <td class="greyout leftborder">Jordan Spieth +1
@@ -869,43 +853,11 @@ Not started</td>
       <td>Collin Morikawa(W) +1
 E thru 6</td>
       <td>Jon Rahm +1
--1 thru 5</td>
+-1 thru 6</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 5</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">1</td>
-      <td>Daniel Berger -1
-Not started</td>
-      <td>Patrick Cantlay -1
-+1 thru 5</td>
-      <td>Jon Rahm +1
--1 thru 5</td>
-      <td>Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 4</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">1</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 5</td>
-      <td>Jordan Spieth +1
--1 thru 5</td>
-      <td>Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 4</td>
-      <td class="greyout">Xander Schauffele +3
-+1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -915,7 +867,7 @@ E thru 4</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td>Jon Rahm(W) +1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Jordan Spieth +1
 -1 thru 5</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -924,20 +876,52 @@ E thru 4</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">2</td>
-      <td>Tiger Woods -1
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">1</td>
+      <td>Scottie Scheffler -3
 Not started</td>
       <td>Rory McIlroy E
 -1 thru 4</td>
-      <td>Collin Morikawa(W) +1
-E thru 6</td>
-      <td>Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout leftborder">Justin Thomas +4
+      <td>Jon Rahm(W) +1
+-1 thru 6</td>
+      <td>Viktor Hovland +3
++3 thru 5</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 4</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 4</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">2</td>
+      <td>Daniel Berger -1
 Not started</td>
-      <td class="greyout">Gary Woodland +6
-+3 thru 11</td>
+      <td>Patrick Cantlay -1
++1 thru 5</td>
+      <td>Jon Rahm +1
+-1 thru 6</td>
+      <td>Viktor Hovland +3
++3 thru 5</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">2</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 6</td>
+      <td>Jordan Spieth +1
+-1 thru 5</td>
+      <td>Viktor Hovland +3
++3 thru 5</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 4</td>
+      <td class="greyout">Xander Schauffele +3
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
@@ -956,36 +940,20 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">3</td>
-      <td>Will Zalatoris -1
-E thru 5</td>
-      <td>Jon Rahm +1
--1 thru 5</td>
-      <td>Jordan Spieth +1
--1 thru 5</td>
-      <td>Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
+      <td>Tiger Woods -1
 Not started</td>
-      <td class="greyout">Sam Burns +6
-+3 thru 7</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">3</td>
-      <td>Will Zalatoris -1
-E thru 5</td>
-      <td>Jon Rahm(W) +1
--1 thru 5</td>
-      <td>Jordan Spieth +1
--1 thru 5</td>
-      <td>Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 4</td>
-      <td class="greyout">Justin Thomas +4
+      <td>Rory McIlroy E
+-1 thru 4</td>
+      <td>Collin Morikawa(W) +1
+E thru 6</td>
+      <td>Viktor Hovland +3
++3 thru 5</td>
+      <td class="greyout leftborder">Justin Thomas +4
 Not started</td>
+      <td class="greyout">Gary Woodland +6
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
@@ -995,7 +963,7 @@ Not started</td>
       <td>Rory McIlroy E
 -1 thru 4</td>
       <td>Jon Rahm +1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Brooks Koepka +3
 E thru 4</td>
       <td class="greyout leftborder">Xander Schauffele +3
@@ -1020,6 +988,22 @@ Not started</td>
 +4 thru 11</td>
     </tr>
     <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">4</td>
+      <td>Will Zalatoris -1
+E thru 5</td>
+      <td>Jon Rahm +1
+-1 thru 6</td>
+      <td>Jordan Spieth +1
+-1 thru 5</td>
+      <td>Viktor Hovland +3
++3 thru 5</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout">Sam Burns +6
++3 thru 7</td>
+    </tr>
+    <tr>
       <td class="bigbold">NewCastle Magpies</td>
       <td class="bigbold">4</td>
       <td>Patrick Cantlay -1
@@ -1041,25 +1025,41 @@ Not started</td>
       <td>Collin Morikawa +1
 E thru 6</td>
       <td>Jon Rahm +1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Patrick Reed +1
 -1 thru 9</td>
       <td>Jordan Spieth +1
 -1 thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +2
-+2 thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +3
++3 thru 5</td>
       <td class="greyout">Brooks Koepka +3
 E thru 4</td>
     </tr>
     <tr>
-      <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">7</td>
-      <td>Jon Rahm +1
--1 thru 5</td>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">4</td>
+      <td>Will Zalatoris -1
+E thru 5</td>
+      <td>Jon Rahm(W) +1
+-1 thru 6</td>
       <td>Jordan Spieth +1
 -1 thru 5</td>
-      <td>Viktor Hovland +2
-+2 thru 4</td>
+      <td>Viktor Hovland +3
++3 thru 5</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 4</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Yellow in Augusta</td>
+      <td class="bigbold">8</td>
+      <td>Jon Rahm +1
+-1 thru 6</td>
+      <td>Jordan Spieth +1
+-1 thru 5</td>
+      <td>Viktor Hovland +3
++3 thru 5</td>
       <td>Brooks Koepka +3
 E thru 4</td>
       <td class="greyout leftborder">Xander Schauffele +3
@@ -1069,13 +1069,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">8</td>
       <td>Jon Rahm +1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Jordan Spieth +1
 -1 thru 5</td>
-      <td>Viktor Hovland +2
-+2 thru 4</td>
+      <td>Viktor Hovland +3
++3 thru 5</td>
       <td>Xander Schauffele +3
 +1 thru 4</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
@@ -1085,11 +1085,11 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">10</td>
       <td>Jon Rahm(W) +1
--1 thru 5</td>
-      <td>Viktor Hovland +2
-+2 thru 4</td>
+-1 thru 6</td>
+      <td>Viktor Hovland +3
++3 thru 5</td>
       <td>Brooks Koepka +3
 E thru 4</td>
       <td>Xander Schauffele +3
