--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:02:17 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 12:03:00 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,22 +172,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Joaquin Niemann -3
-Not started</td>
-      <td>Rory McIlroy E
--1 thru 4</td>
-      <td>Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +3
-Not started</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -4
@@ -202,6 +186,22 @@ E thru 6</td>
 E thru 4</td>
       <td class="greyout">Xander Schauffele +3
 +1 thru 4</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Joaquin Niemann -3
+Not started</td>
+      <td>Rory McIlroy E
+-1 thru 4</td>
+      <td>Tommy Fleetwood(W) +3
+Not started</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 5</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -220,22 +220,6 @@ E thru 4</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 10</td>
-      <td>Jordan Spieth +1
--1 thru 5</td>
-      <td>Viktor Hovland +2
-+2 thru 4</td>
-      <td class="greyout leftborder">Xander Schauffele +3
-+1 thru 4</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-3</td>
       <td>Corey Conners -3
@@ -245,26 +229,10 @@ Not started</td>
       <td>Tyrrell Hatton E
 E thru 7</td>
       <td>Jon Rahm +1
--1 thru 5</td>
+-1 thru 6</td>
       <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
       <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-3</td>
-      <td>Sungjae Im -5
-E thru 8</td>
-      <td>Patrick Cantlay -1
-+1 thru 5</td>
-      <td>Collin Morikawa +1
-E thru 6</td>
-      <td>Viktor Hovland(W) +2
-+2 thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 4</td>
-      <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
@@ -277,11 +245,43 @@ Not started</td>
       <td>Jordan Spieth(W) +1
 -1 thru 5</td>
       <td>Jon Rahm +1
--1 thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 4</td>
+-1 thru 6</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 5</td>
       <td class="greyout">Brooks Koepka +3
 E thru 4</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 10</td>
+      <td>Jordan Spieth +1
+-1 thru 5</td>
+      <td>Viktor Hovland +3
++3 thru 5</td>
+      <td class="greyout leftborder">Xander Schauffele +3
++1 thru 4</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-2</td>
+      <td>Sungjae Im -5
+E thru 8</td>
+      <td>Patrick Cantlay -1
++1 thru 5</td>
+      <td>Collin Morikawa +1
+E thru 6</td>
+      <td>Viktor Hovland(W) +3
++3 thru 5</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 4</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -291,7 +291,7 @@ Not started</td>
       <td>Will Zalatoris -1
 E thru 5</td>
       <td>Jon Rahm +1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Jordan Spieth +1
 -1 thru 5</td>
       <td class="greyout leftborder">Shane Lowry +1
@@ -325,7 +325,7 @@ Not started</td>
       <td>Collin Morikawa +1
 E thru 6</td>
       <td>Jon Rahm +1
--1 thru 5</td>
+-1 thru 6</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 5</td>
       <td class="greyout">Robert MacIntyre +2
@@ -355,7 +355,7 @@ Not started</td>
       <td>Tony Finau -1
 Not started</td>
       <td>Jon Rahm(W) +1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Collin Morikawa +1
 E thru 6</td>
       <td class="greyout leftborder">Jordan Spieth +1
@@ -369,7 +369,7 @@ E thru 4</td>
       <td>Corey Conners -3
 -1 thru 10</td>
       <td>Jon Rahm +1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Jordan Spieth +1
 -1 thru 5</td>
       <td>Xander Schauffele +3
@@ -381,15 +381,15 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Jon Rahm +1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Collin Morikawa +1
 E thru 6</td>
       <td>Patrick Reed +1
 -1 thru 9</td>
-      <td>Viktor Hovland(W) +2
-+2 thru 4</td>
+      <td>Viktor Hovland(W) +3
++3 thru 5</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 4</td>
       <td class="greyout">Luke List +5
